# syntax-highlighting

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .yamlignore  CMakeLists.txt  KF5SyntaxHighlightingConfig.cmake.in  KF6SyntaxHighlightingConfig.cmake.in  KateSyntaxConfig.cmake.in  README  README.md  add_license.sh  config-katesyntax-version.h.cmake  metainfo.yaml  org_kde_ksyntaxhighlighting.categories  org_kde_syntax-highlighting.categories  syntaxrepository_test.cpp
autotests/: CMakeLists.txt  foldingtest.cpp  highlighter_benchmark.cpp  htmlhighlighter_test.cpp  repository_benchmark.cpp  repository_test.cpp  repository_test_base.cpp  repository_test_base.h  syntaxrepository_test.cpp  test-config.h.in  testhighlighter.cpp  theme_test.cpp  themepreviewicon_test.cpp  update-reference-data.sh.in  wildcardmatcher_test.cpp
autotests/folding/: .gitignore.fold  .kdesrc-buildrc.fold  Earthfile.fold  Jamroot.fold  Kconfig.fold  Makefile.fold  acpi-dsdt.dsl.fold  asciidoc.adoc.fold  basic.xml.fold  brightscript.brs.fold  build.gradle.fold  clojure.clj.fold  complex.xml.fold  craftenv.ps1.fold  (+259 more)
data/: CMakeLists.txt  ansforth94.xml  ansic89.xml  apache.xml  asterisk.xml  bibtex.xml  bmethod.xml  boo.xml  carto-css.xml  chicken.xml  cisco.xml  clipper.xml  coffee.xml  crk.xml  cue.xml  debianchangelog.xml  dosbat.xml  e.xml  email.xml  fasm.xml  fortran.xml  fsharp.xml  fstab.xml  ftl.xml  gcc.xml  gnuplot.xml  julia.xml  kbasic.xml  kconfig.xml  less.xml  lsl.xml  mako.xml  mediawiki.xml  metafont.xml  modelines.xml  nesc.xml  pascal.xml  pgn.xml  php.xml  pli.xml  (+17 more)
data/generators/: cmake.xml.tpl  cmake.yaml  generate-cmake-syntax.py  generate-doxygenlua.pl  generate-html.pl  generate-php.pl  generate_jinja.py  kateschema_to_theme_converter.py  spdx-comments.xml.tpl  update-kate-editor-org.pl  update_css_and_scss.py
data/generators/base16-ksyntaxhighlighting/templates/: config.yaml
data/schema/: language.xsd
data/syntax/: 4dos.xml  abap.xml  abc.xml  abnf.xml  acpi-asl.xml  acpi-dsl.xml  actionscript.xml  adblock.xml  agda.xml  ahdl.xml  ahk.xml  alert.xml  alif.xml  ample.xml  ansforth94.xml  ansic89.xml  ansys.xml  antlr.xml  apache.xml  apparmor.xml  asciidoc.xml  asm-arm.xml  asm-avr.xml  asm-dsp56k.xml  asm-m68k.xml  asm6502.xml  asn1.xml  asp.xml  asterisk.xml  ats.xml  awk.xml  bash.xml  bibtex.xml  bitbake.xml  bmethod.xml  bnf.xml  boo.xml  brightscript.xml  c.xml  cabal.xml  (+354 more)
data/themes/: atom-one-dark.theme  atom-one-light.theme  ayu-dark.theme  ayu-light.theme  ayu-mirage.theme  breeze-dark.theme  breeze-light.theme  catppuccin-frappe.theme  catppuccin-latte.theme  catppuccin-macchiato.theme  catppuccin-mocha.theme  default.theme  dracula.theme  falcon.theme  github-dark.theme  github-light.theme  gruvbox-dark.theme  gruvbox-light.theme  monokai.theme  nord.theme  oblivion.theme  printing.theme  radical.theme  solarized-dark.theme  solarized-light.theme  theme-data.qrc  tokyo-night-light.theme  tokyo-night-storm.theme  tokyo-night.theme  vim-dark.theme  vscodium-dark.theme
docs/: qml-api.md  qml-api.md.license
examples/: CMakeLists.txt  codeeditor.cpp  codeeditor.h  main.cpp
generators/: cmake.xml.tpl  cmake.yaml
src/: CMakeLists.txt  Messages.sh  abstracthighlighter.cpp  abstracthighlighter.h  context.cpp  context.h  contextswitch.cpp  contextswitch.h  downloader.cpp  downloader.h  format.cpp  format.h  htmlhighlighter.cpp  htmlhighlighter.h  keywordlist.cpp  keywordlist.h  matchresult.cpp  matchresult.h  rule.cpp  rule.h  syntaxdefinition.cpp  syntaxdefinition.h  syntaxhighlighter.cpp  syntaxhighlighter.h  syntaxrepository.cpp  syntaxrepository.h  theme.cpp  theme.h
src/cli/: CMakeLists.txt  kate-syntax-highlighter.cpp  ksyntaxhighlighter.cpp
src/indexer/: CMakeLists.txt  katehighlightingindexer.cpp
src/lib/: CMakeLists.txt  abstracthighlighter.cpp  abstracthighlighter.h  abstracthighlighter_p.h  ansihighlighter.cpp  ansihighlighter.h  context.cpp  context.h  context_p.h  contextswitch.cpp  contextswitch.h  contextswitch_p.h  definition.cpp  definition.h  definition_p.h  definitiondownloader.cpp  definitiondownloader.h  definitionref_p.h  downloader.cpp  downloader.h  dynamicregexpcache_p.h  foldingregion.cpp  foldingregion.h  format.cpp  format.h  format_p.h  highlightingdata.cpp  highlightingdata_p.hpp  htmlhighlighter.cpp  htmlhighlighter.h  keywordlist.cpp  keywordlist_p.h  ksyntaxhighlighting-index.qdoc  ksyntaxhighlighting.qdocconf  loadhighlightingdata.cpp  loadhighlightingdata_p.hpp  matchresult.cpp  matchresult.h  matchresult_p.h  repository.cpp  (+27 more)
src/quick/: CMakeLists.txt  kquicksyntaxhighlighter.cpp  kquicksyntaxhighlighter.h  kquicksyntaxhighlightingplugin.cpp  kquicksyntaxhighlightingplugin.h  ksyntaxhighlightingqml.qdoc  ksyntaxhighlightingqml.qdocconf
syntax/: cmake.xml
tests/: CMakeLists.txt  qsyntaxhighlighter.cpp
tests/auto/: CMakeLists.txt  highlighter_benchmark.cpp  htmlhighlighter_test.cpp  syntaxrepository_test.cpp  testhighlighter.cpp
tests/auto/html/: basic.markdown.html  basic.xml.html  complex.xml.html  test.bash.html  test.c.html  test.cmake.html  test.css.html  test.frag.html  test.htm.html  test.js.html  test.markdown.html  test.qml.html  test.sql.html  test.tex.html
tests/auto/input/: basic.markdown  test.c  test.frag  test.htm  test.js  test.markdown  test.qml  test.sql
tests/auto/reference/: basic.markdown.ref  basic.markdown.ref.html  basic.xml.ref.html  complex.xml.ref.html  test.bash.ref.html  test.c.ref.html  test.cmake.ref.html  test.frag.ref  test.frag.ref.html  test.htm.ref.html  test.js.ref.html  test.markdown.ref.html  test.qml.ref  test.qml.ref.html  test.sql.ref  test.sql.ref.html  test.tex.ref.html  text.xml.ref.html
tools/: CMakeLists.txt  kate-syntax-highlighter.cpp
utils/: detect-identical-context.py  generate-dot-file.lua  generate-dot-file.py  kateschema_to_theme_converter.py  theme_contrast_checker.py  update-kate-editor-org.pl
utils/schema-converter/: .gitignore  Pipfile  README.rst  pyproject.toml  setup.cfg
utils/schema-converter/kateschema2theme/: cli.py
(+1555 files in other folders)
