[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
name = kateschema2theme
version = 1.0.0
description = Convert kate4 schema or hlcolors file to the JSON theme
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Alex Turbov
author_email = i.zaufi@gmail.com
maintainer = Alex Turbov
maintainer_email = i.zaufi@gmail.com
keywords =
    kate color theme
license = MIT
license_file = ../../LICENSES/MIT.txt
platform = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Utilities

[options]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
packages =
    kateschema2theme
install_requires =
    click
    columnize
python_requires = >=3.8
zip_safe = True

[options.entry_points]
console_scripts = kateschema2theme = kateschema2theme.cli:kateschema2theme

[bdist_wheel]
universal = 1

[pycodestyle]
# https://pep8.readthedocs.io/en/latest/intro.html#configuration
ignore = E121,E123,E126,E131,E203,E265,W503,W504
max-line-length = 160
statistics = True
